Fix issues with phone version of portfolio (buttons, favorite overlapping, bubbles not on page, titles off screen) " git push

--- a/src/css/Experience.css
+++ b/src/css/Experience.css
@@ -1,7 +1,8 @@
 .experience-header {
   display: flex;
   padding: 25px;
-  margin-left: 300px;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 /* Timeline structure */
