--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -24,7 +24,7 @@ nav {
   left: 50%;
   transform: translateX(-50%);
   display: flex;
-  gap: 20px;
+  gap: 10px;
   align-items: center;
 }
 
