--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -117,6 +117,17 @@ span {
 
 .target-positions {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.target-positions .highlight {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  font-weight: 600;
+}
+
+.target-position-bubbles {
+  gap: 10px;
+  display: flex;
 }
 
 .location,
@@ -124,11 +135,6 @@ span {
 .target-positions {
   font-size: 1.1rem;
   color: #fff;
-}
-
-.target-positions .highlight {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-  font-weight: 600;
 }
 
 .bubble-blue,
